--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.9.1"
   },
   "devDependencies": {
